--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
 <body>
     <nav>
         <i id="burguer" class="material-icons">menu</i>
+        <i id="burguer" class="material-icons">search</i>
+        <img src="imagens/logo-microsoft.png" alt="logo da microsoft">
+        <i id="burguer" class="material-icons">person</i>
     </nav>
     <header>
-
+        <img src="imagens/japones safado.avif" alt="homem oreintal sorrindo enquanto logos de apps da microsoft voam em volta dele">
+        <h2>Maximize o dia a dia com o Microsoft 365</h2>
+        <p>Obtenha proteção online, armazenamento seguro na nuvem e aplicativos inovadores desenvolvidos para atender às suas necessidades, tudo em um único plano.</p>
+        <a id="1" href="#">Para 1 pessoa</a>
+        <a id="2" href="#">para até 6 pessoas ></a>
     </header>
     <main>
 
