--- a/index.html
+++ b/index.html
@@ -9,20 +9,30 @@
 </head>
 <body>
     <nav>
-        <i id="burguer" class="material-icons">menu</i>
-        <i id="burguer" class="material-icons">search</i>
         <img src="imagens/logo-microsoft.png" alt="logo da microsoft">
+        <a href="#">Microsoft 365</a>
+        <a href="#">Teams</a>
+        <a href="#">Copilot</a>
+        <a href="#">Windows</a>
+        <a href="#">Xbox</a>
+        <a href="#">Suporte</a>
+        <a id="direito" href="#">Toda a Microsoft</a>
+        <i id="burguer" class="material-icons">search</i>
         <i id="burguer" class="material-icons">person</i>
     </nav>
     <header>
         <img src="imagens/japones safado.avif" alt="homem oreintal sorrindo enquanto logos de apps da microsoft voam em volta dele">
-        <h2>Maximize o dia a dia com o Microsoft 365</h2>
-        <p>Obtenha proteção online, armazenamento seguro na nuvem e aplicativos inovadores desenvolvidos para atender às suas necessidades, tudo em um único plano.</p>
-        <a id="1" href="#">Para 1 pessoa</a>
-        <a id="2" href="#">para até 6 pessoas ></a>
+        <div>
+            <h2>Maximize o dia a dia com o Microsoft 365</h2>
+            <p>Obtenha proteção online, armazenamento seguro na nuvem e aplicativos inovadores desenvolvidos para atender às suas necessidades, tudo em um único plano.</p>
+            <a id="um" href="#">Para 1 pessoa</a>
+            <a id="dois" href="#">para até 6 pessoas ></a>
+        </div>
     </header>
     <main>
-
+        <div><img src="imagens/Link-List-Icons-Microsoft-365.svg" alt="logo da microsoft"></div>
+        <img src="imagens/Link-List-Icons-Microsoft-365.svg" alt="logo do xbox">
+        <img src="imagens/Link-List-Icons-Microsoft-365.svg" alt="logo da microsoft">
     </main>
     <footer>
 
